--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "ipfs"
   ],
   "dependencies": {
+    "@helia/unixfs": "^5.0.3",
     "commander": "^14.0.0",
     "fs-extra": "^11.3.0",
+    "helia": "^5.4.2",
     "multiformats": "^13.3.7"
   },
   "devDependencies": {
