--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "commander": "^14.0.0",
     "fs-extra": "^11.3.0",
     "helia": "^5.4.2",
-    "multiformats": "^13.3.7"
+    "multiformats": "^13.3.7",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
