--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "main": "dist/cli.js",
   "scripts": {
     "build": "tsc",
+    "lint": "run-p lint:*",
+    "lint:js": "eslint .",
+    "lint:prettier": "prettier --check \"./**/*.{ts,js}\" --ignore-path .gitignore",
+    "fix:lint": "npm run fix:prettier && npm run lint:js -- --fix && npm run fix:prettier",
+    "fix:prettier": "npm run lint:prettier -- --write",
     "typecheck": "tsc --noEmit"
   },
   "homepage": "https://github.com/frouriojs/kuuga-cli#readme",
@@ -39,8 +44,18 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.0.3",
-    "typescript": "^5.7.3"
+    "eslint": "^9.29.0",
+    "eslint-config-flat-gitignore": "^2.1.0",
+    "eslint-config-prettier": "^10.1.5",
+    "globals": "^16.2.0",
+    "jiti": "^2.4.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.6.0",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.35.0"
   }
 }
