--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
     "module": "ES2022",
     "moduleResolution": "node",
     "outDir": "dist",
-    "rootDir": "src",
+    "baseUrl": ".",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src", "eslint.config.ts"],
+  "exclude": ["node_modules"]
 }
